@@ -19,8 +19,6 @@
 		<argLine>-Djava.security.egd=file:/dev/./urandom -Xmx256m</argLine>
 		<resource.delimiter>@</resource.delimiter>
 		<spring-boot.version>3.5.5</spring-boot.version>
-		<gatling-maven-plugin.version>4.20.3</gatling-maven-plugin.version>
-		<gatling.version>3.13.5</gatling.version>
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 		<lombok.version>1.18.40</lombok.version>
 		<testcontainers.version>1.21.3</testcontainers.version>
@@ -44,7 +42,7 @@
 		<scim2-client.version>2.3.8</scim2-client.version>
 		<mockito.version>5.11.0</mockito.version>
 		<byte-buddy.version>1.14.12</byte-buddy.version>
-		<xmlunit.version>2.10.3</xmlunit.version>
+		<xmlunit.version>2.10.4</xmlunit.version>
 	</properties>
 
 	<dependencies>
@@ -354,12 +352,6 @@
 			<artifactId>postgresql</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>io.gatling.highcharts</groupId>
-			<artifactId>gatling-charts-highcharts</artifactId>
-			<version>${gatling.version}</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -467,7 +459,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.5.3</version>
+				<version>3.5.4</version>
 				<configuration>
 					<includes>
 						<include>**/*Test.java</include>
@@ -478,7 +470,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.5.3</version>
+				<version>3.5.4</version>
 				<executions>
 					<execution>
 						<goals>
@@ -489,20 +481,6 @@
 				</executions>
 				<configuration>
 					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>io.gatling</groupId>
-				<artifactId>gatling-maven-plugin</artifactId>
-				<version>${gatling-maven-plugin.version}</version>
-				<configuration>
-					<jvmArgs>
-						<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
-					</jvmArgs>
-					<runMultipleSimulations>true</runMultipleSimulations>
-					<includes>
-						<include>simulations.jasper.*Simulation</include>
-					</includes>
 				</configuration>
 			</plugin>
 		</plugins>
